# TIC-wolfpack

./: .eleventy.js  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  package-lock.json  package.json  wrangler.toml
.claude/: settings.json  settings.local.json
.claude/commands/: end-session.md  qq.md
.claude/hooks/: alpha-edit-guard.sh
.github/workflows/: build.yml  lighthouse.yml  mission-control.yml
artifacts/bookingtimes-com-content-creation-emulator/: intake.json  manifest.json
bookingtimes-emulator/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
evals/: axe-config.json  brand-check.sh  compliance-blocklist.txt  compliance-check.sh  emdash-check.sh  lighthouserc.js  structured-data-check.js  voice-blocklist.sh  voice-blocklist.txt
mission-control/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mission-control/src-tauri/: Cargo.toml  tauri.conf.json
mission-control/src-tauri/artifacts/peakprotocol/: manifest.json
mission-control/src-tauri/capabilities/: default.json
mission-control/src-tauri/src/: artifacts.rs  db.rs  error.rs  intake.rs  interview.rs  lib.rs  main.rs  manifest.rs  memory.rs  queries.rs  settings.rs  watcher.rs
peakprotocol/: package-lock.json  package.json
scripts/: SCROLLYTELLING-README.md  extract-frames.sh
squad/: PROTOCOL.md  app-architecture.md  claude_token.md  init_db.py  interview.py  log.py  operating-model.md  planning-ux.md  registry.json  tmp_cloud_report.txt  viewer.html
src/: _headers.njk  _redirects.njk  robots.txt.njk  sitemap.njk
(+498 files in other folders)
