[package]
name = "mission-control"
version = "0.1.0"
description = "Wolf Pack Mission Control - Desktop app for project development orchestration"
authors = ["Wolf Pack"]
edition = "2021"

[lib]
name = "mission_control_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
notify-debouncer-mini = "0.5"
thiserror = "2"
open = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
